boltffi_backend/tests/kotlin/snapshots/kotlin__callback__kotlin_target_renders_callback_record_parameters.snap
---
source: boltffi_backend/tests/kotlin/callback.rs
expression: "rendered_fixture(\"callback/callback_record_parameter\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

data class Point(
    val x: Int,
    val y: Int
) {
    internal fun toByteArray(): ByteArray {
        val buffer = java.nio.ByteBuffer
            .allocate(STRUCT_SIZE)
            .order(java.nio.ByteOrder.nativeOrder())
        writeTo(buffer, 0)
        return buffer.array()
    }

    internal fun toDirectBuffer(): java.nio.ByteBuffer {
        val buffer = java.nio.ByteBuffer
            .allocateDirect(STRUCT_SIZE)
            .order(java.nio.ByteOrder.nativeOrder())
        writeTo(buffer, 0)
        return buffer
    }

    internal fun writeTo(buffer: java.nio.ByteBuffer, offset: Int) {
        buffer.putInt(offset, x)
        buffer.putInt(offset + 4, y)
    }

    companion object {
        internal const val STRUCT_SIZE: Int = 8

        internal fun fromByteArray(bytes: ByteArray): Point {
            require(bytes.size == STRUCT_SIZE)
            val buffer = java.nio.ByteBuffer
                .wrap(bytes)
                .order(java.nio.ByteOrder.nativeOrder())
            return fromBuffer(buffer, 0)
        }

        internal fun fromBuffer(buffer: java.nio.ByteBuffer, offset: Int): Point {
            return Point(
                buffer.getInt(offset),
                buffer.getInt(offset + 4)
            )
        }
    }
}

interface Listener {
    fun onPoint(point: Point)
}

private object ListenerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, Listener>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: Listener): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    fun get(handle: Long): Listener? = map[handle]

    fun remove(handle: Long): Listener? = map.remove(handle)

    fun clone(handle: Long): Long {
        val value = map[handle] ?: return 0L
        return insert(value)
    }
}

object ListenerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        ListenerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return ListenerMap.clone(handle)
    }

    @JvmStatic
    fun on_point(handle: Long, point: ByteArray) {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        impl.onPoint(Point.fromByteArray(point))
    }
}

object ListenerBridge {
    fun create(value: Listener): Long {
        return ListenerMap.insert(value)
    }
}
