boltffi_backend/tests/kotlin/snapshots/kotlin__callback__kotlin_target_renders_nullable_callback_handle_returns.snap
---
source: boltffi_backend/tests/kotlin/callback.rs
expression: "rendered_fixture(\"callback/nullable_callback_handle_return\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_callback_handle_demo_listener_on_value(handle: Long, value: Int): Int
    @JvmStatic external fun boltffi_function_demo_optional_boxed_listener(): Long
    @JvmStatic external fun boltffi_function_demo_optional_shared_listener(): Long
    @JvmStatic external fun boltffi_callback_handle_clone(handle: Long): Long
    @JvmStatic external fun boltffi_callback_handle_release(handle: Long): Unit
}

interface Listener {
    fun onValue(value: UInt): UInt
}

private object ListenerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, Listener>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: Listener): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    fun get(handle: Long): Listener? = map[handle]

    fun remove(handle: Long): Listener? = map.remove(handle)

    fun clone(handle: Long): Long {
        val value = map[handle] ?: return 0L
        return insert(value)
    }
}

object ListenerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        ListenerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return ListenerMap.clone(handle)
    }

    @JvmStatic
    fun on_value(handle: Long, value: Int): Int {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        return impl.onValue(value.toUInt()).toInt()
    }
}

private class ListenerHandle(private val handle: Long) : Listener, AutoCloseable {
    private var closed = false

    override fun close() {
        if (!closed) {
            Native.boltffi_callback_handle_release(handle)
            closed = true
        }
    }

    private fun requireOpen(): Long {
        check(!closed) { "callback handle is closed" }
        return handle
    }

    fun rawHandle(): Long = requireOpen()

    override fun onValue(value: UInt): UInt {
        return Native.boltffi_callback_handle_demo_listener_on_value(this.requireOpen(), value.toInt()).toUInt()
    }
}

object ListenerBridge {
    fun create(value: Listener): Long {
        if (value is ListenerHandle) {
            return value.rawHandle()
        }
        return ListenerMap.insert(value)
    }
}

fun optionalBoxedListener(): Listener? {
    val __boltffi_result = Native.boltffi_function_demo_optional_boxed_listener()
    return if (__boltffi_result == 0L) null else ListenerHandle(__boltffi_result)
}

fun optionalSharedListener(): Listener? {
    val __boltffi_result = Native.boltffi_function_demo_optional_shared_listener()
    return if (__boltffi_result == 0L) null else ListenerHandle(__boltffi_result)
}
